--- a/index.html
+++ b/index.html
@@ -1,122 +1,47 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DoItWithIT</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom, #0d1e30, #1f3b5c);
-      color: #fff;
-      overflow-x: hidden;
-    }
-
-    header {
-      text-align: center;
-      padding: 2rem;
-    }
-
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-      color: #00bfff;
-    }
-
-    p {
-      color: #ccc;
-      font-size: 1.2rem;
-    }
-
-    .lang-switch {
-      text-align: center;
-      margin-top: 1rem;
-    }
-
-    .lang-switch button {
-      background: none;
-      border: 1px solid #00bfff;
-      color: #00bfff;
-      padding: 0.5rem 1rem;
-      margin: 0 0.5rem;
-      cursor: pointer;
-    }
-
-    .network {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      max-width: 1000px;
-      margin: 4rem auto;
-      position: relative;
-    }
-
-    .center {
-      position: absolute;
-      top: -4rem;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: #007acc;
-      border-radius: 50%;
-      padding: 2rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      box-shadow: 0 0 30px rgba(0, 191, 255, 0.4);
-      border: 3px solid #fff;
-      z-index: 10;
-    }
-
-    .circle {
-      background-color: #003366;
-      color: #fff;
-      border-radius: 1rem;
-      padding: 1rem;
-      text-align: center;
-      width: 150px;
-      height: 150px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-      border: 2px solid #00bfff;
-      transition: transform 0.3s ease, background-color 0.3s ease;
-    }
-
-    .circle:hover {
-      transform: scale(1.1);
-      background-color: #0055a5;
-    }
-
-    .circle svg {
-      width: 32px;
-      height: 32px;
-      margin-bottom: 0.5rem;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      background-color: #001d3d;
-      color: #ccc;
-    }
-
-    a {
-      color: #00bfff;
-      text-decoration: none;
+    body { margin:0; font-family:'Segoe UI',sans-serif; background:linear-gradient(to bottom,#0d1e30,#1f3b5c); color:#fff; overflow-x:hidden; }
+    header { text-align:center; padding:2rem; position:relative; }
+    .lang-switch { position:absolute; top:1rem; right:1rem; }
+    .lang-switch button { background:none; border:1px solid #00bfff; color:#00bfff; padding:0.4rem 0.8rem; margin-left:0.5rem; border-radius:5px; cursor:pointer; }
+    .lang-switch button.active { background:#00bfff; color:#001d3d; }
+    h1 { font-size:3rem; margin-bottom:.5rem; color:#00bfff; }
+    #subtitle { font-size:1.2rem; color:#ccc; }
+    .network { position:relative; width:100%; max-width:800px; margin:4rem auto; height:600px; }
+    .center { position:absolute; top:50%;left:50%;transform:translate(-50%,-50%);background:#007acc;border-radius:50%;width:140px;height:140px;padding:2rem;display:flex;align-items:center;justify-content:center;font-size:1.5rem;font-weight:bold;box-shadow:0 0 30px rgba(0,191,255,0.4);border:3px solid #fff; }
+    .circle { position:absolute;width:120px;height:120px;background:#003366;border-radius:50%;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:.5rem;border:2px solid #00bfff;transition:transform .3s ease,background .3s ease;box-shadow:0 0 10px rgba(255,255,255,0.1); }
+    .circle:hover { transform:scale(1.1); background:#0055a5; z-index:10; }
+    .circle svg { width:32px;height:32px; margin-bottom:.3rem; fill:#00bfff; animation: pulse 2s infinite; }
+    .circle span { text-align:center; font-size:.85rem; }
+    @keyframes pulse { 0%,100% { transform:scale(1); } 50% { transform:scale(1.1); } }
+    /* Rozmieszczenie 8 kółek */
+    .circle:nth-child(2){top:0;left:50%;transform:translate(-50%,0);}
+    .circle:nth-child(3){top:18%;left:85%;transform:translate(-50%,-50%);}
+    .circle:nth-child(4){top:50%;left:100%;transform:translate(-100%,-50%);}
+    .circle:nth-child(5){top:82%;left:85%;transform:translate(-50%,-50%);}
+    .circle:nth-child(6){top:100%;left:50%;transform:translate(-50%,-100%);}
+    .circle:nth-child(7){top:82%;left:15%;transform:translate(-50%,-50%);}
+    .circle:nth-child(8){top:50%;left:0;transform:translate(0,-50%);}
+    .circle:nth-child(9){top:18%;left:15%;transform:translate(-50%,-50%);}
+    footer { text-align:center; padding:2rem; background:#001d3d; color:#ccc; }
+    a { color:#00bfff; text-decoration:none; }
+    @media(max-width:768px){
+      .network{height:auto;display:flex;flex-wrap:wrap;justify-content:center;gap:1rem;padding-bottom:2rem;}
+      .center, .circle { position:static !important; transform:none !important; }
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>DoItWithIT</h1>
-    <p>Realne wsparcie IT dla domu i małych firm</p>
+    <p id="subtitle">Realne wsparcie IT dla domu i małych firm</p>
     <div class="lang-switch">
-      <button onclick="switchLang('pl')">PL</button>
+      <button onclick="switchLang('pl')" class="active">PL</button>
       <button onclick="switchLang('en')">EN</button>
     </div>
   </header>
@@ -124,57 +49,87 @@
   <div class="network">
     <div class="center">DoItWithIT</div>
 
+    <!-- Zdalna pomoc -->
     <div class="circle" data-pl="Zdalna pomoc" data-en="Remote help">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M12 1C8.1 1 5 4.1 5 8v4c0 3.9 3.1 7 7 7s7-3.1 7-7V8c0-3.9-3.1-7-7-7z"/><path d="M5 12H3v-2h2"/><path d="M21 12h-2v-2h2"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10
+        10-4.48 10-10S17.52 2 12 2zm-1 14.5v-1.1c-2.83-.48-5-2.94-5-5.4
+        0-1.5.63-2.86 1.66-3.82L9 8v6l2 .5z"/></svg>
       <span>Zdalna pomoc</span>
     </div>
 
+    <!-- Instalacja systemu -->
     <div class="circle" data-pl="Instalacja systemu" data-en="System install">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M3 17v-2a4 4 0 0 1 4-4h10a4 4 0 0 1 4 4v2"/><path d="M12 3v6"/><path d="M9 6h6"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M9 4H7v2h2V4zm0 4H7v2h2V8zm0 4H7v2h2v-2zm0
+        4H7v2h2v-2zM11 4h6v2h-6V4zm0 4h6v2h-6V8zm0 4h6v2h-6v-2zm0 4h6v2h-6v-2z"/></svg>
       <span>Instalacja systemu</span>
     </div>
 
+    <!-- Konfiguracja sieci -->
     <div class="circle" data-pl="Konfiguracja sieci" data-en="Network setup">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M4 4h16v4H4zM4 16h16v4H4zM12 8v8"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M12 4C8.13 4 5 7.13 5 11c0 3.54
+        2.61 6.48 6 6.92V20h2v-2.08c3.39-.44 6-3.38
+        6-6.92 0-3.87-3.13-7-7-7zm0 12
+        c-2.76 0-5-2.24-5-5s2.24-5 5-5
+        5 2.24 5 5-2.24 5-5 5z"/></svg>
       <span>Konfiguracja sieci</span>
     </div>
 
-    <div class="circle" data-pl="Instalacja peryferiów" data-en="Peripheral install">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="3" y="4" width="18" height="14" rx="2"/><path d="M8 20h8M10 16h4"/></svg>
+    <!-- Instalacja peryferiów -->
+    <div class="circle" data-pl="Instalacja peryferiów" data-en="Peripheral setup">
+      <svg viewBox="0 0 24 24"><path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3z"/></svg>
       <span>Instalacja peryferiów</span>
     </div>
 
+    <!-- Obsługa domowa -->
     <div class="circle" data-pl="Obsługa domowa" data-en="Home support">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><path d="M9 22V12h6v10"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12
+        3 2 12h3v8z"/></svg>
       <span>Obsługa domowa</span>
     </div>
 
+    <!-- Obsługa firmowa -->
     <div class="circle" data-pl="Obsługa firmowa" data-en="Business support">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2"/><path d="M9 3v18M15 3v18"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M3 13h18v2H3v-2zm0-4h18v2H3V9zm0
+        -4h18v2H3V5z"/></svg>
       <span>Obsługa firmowa</span>
     </div>
 
-    <div class="circle" data-pl="Instalacje sieci" data-en="Structured cabling">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M4 6h16M4 10h16M4 14h10M4 18h6"/></svg>
-      <span>Instalacje sieci</span>
+    <!-- Sieci strukturalne -->
+    <div class="circle" data-pl="Instalacje sieci strukturalnych" data-en="Structured cabling">
+      <svg viewBox="0 0 24 24"><path d="M4 6h16v2H4V6zm0 5h16v2H4v-2zm0
+        5h16v2H4v-2z"/></svg>
+      <span>Sieci strukturalne</span>
     </div>
 
-    <div class="circle" data-pl="Naprawa światłowodów" data-en="Fiber repair">
-      <svg viewBox="0 0 24 24" fill="none" stroke="#00bfff" stroke-width="2"><path d="M2 12h6l2 2h4l2-2h6"/><path d="M12 2v6m0 8v6"/></svg>
-      <span>Naprawa światłowodów</span>
+    <!-- Spawanie i naprawa światłowodów -->
+    <div class="circle" data-pl="Spawanie światłowodów" data-en="Fiber repair">
+      <svg viewBox="0 0 24 24"><path d="M12 4C7 4 3 8
+        3 13s4 9 9 9 9-4 9-9-4-9-9-9zm0
+        16c-3.87 0-7-3.13-7-7s3.13-7
+        7-7 7 3.13 7 7-3.13 7-7 7z"/><circle cx="12" cy="13" r="3"/></svg>
+      <span>Spawanie światłowodów</span>
     </div>
   </div>
 
   <footer>
-    <p>Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a></p>
+    <p>Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> |
+    Tel: <a href="tel:+48123">+48 123</a></p>
     <p>&copy; 2025 DoItWithIT</p>
   </footer>
 
   <script>
     function switchLang(lang) {
-      document.querySelectorAll('.circle').forEach(el => {
-        const label = el.querySelector('span');
-        label.textContent = el.getAttribute(`data-${lang}`);
+      document.getElementById('subtitle').innerText =
+        (lang === 'pl')
+          ? 'Realne wsparcie IT dla domu i małych firm'
+          : 'Real IT support for home and small business';
+
+      document.querySelectorAll('.circle').forEach(c => {
+        c.querySelector('span').innerText = c.getAttribute('data-' + lang);
+      });
+
+      document.querySelectorAll('.lang-switch button').forEach(btn => {
+        btn.classList.toggle('active', btn.textContent.toLowerCase() === lang);
       });
     }
   </script>
