--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
       width: 110px;
       height: 110px;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
@@ -104,22 +103,6 @@
       transform: scale(1.2) translate(-50%, -50%);
       background-color: #0055a5;
       z-index: 10;
-    }
-
-    .icon {
-      width: 36px;
-      height: 36px;
-      margin-bottom: 0.3rem;
-    }
-
-    .icon svg {
-      width: 100%;
-      height: 100%;
-      fill: #00bfff;
-    }
-
-    .label {
-      font-size: 0.8rem;
     }
 
     footer {
@@ -157,16 +140,6 @@
         font-size: 1rem;
         padding: 1rem;
       }
-
-      .icon {
-        width: 28px;
-        height: 28px;
-        margin-bottom: 0.2rem;
-      }
-
-      .label {
-        font-size: 0.7rem;
-      }
     }
   </style>
 </head>
@@ -183,62 +156,99 @@
 
   <div class="network">
     <div class="center">DoItWithIT</div>
-
-    <div class="circle" data-key="remote">
-      <div class="icon">
-        <svg viewBox="0 0 24 24"><path d="M4 5h16v2H4V5zm0 4h16v10H4V9zm2 2v6h12v-6H6z"/></svg>
-      </div>
-      <div class="label">Zdalna pomoc</div>
-    </div>
-
-    <div class="circle" data-key="install">
-      <div class="icon">
-        <svg viewBox="0 0 24 24"><path d="M12 2L6.5 8H10v8h4V8h3.5L12 2z"/></svg>
-      </div>
-      <div class="label">Instalacja systemu</div>
-    </div>
-
-    <div class="circle" data-key="network">
-      <div class="icon">
-        <svg viewBox="0 0 24 24"><path d="M4 4h16v2H4zm0 6h10v2H4zm0 4h16v2H4zm0 4h10v2H4z"/></svg>
-      </div>
-      <div class="label">Konfiguracja sieci</div>
-    </div>
-
-    <div class="circle" data-key="peripherals">
-      <div class="icon">
-        <svg viewBox="0 0 24 24"><path d="M7 2h10v2H7zM3 6h18v12H3zM5 8v8h14V8z"/></svg>
-      </div>
-      <div class="label">Instalacja peryferiów</div>
-    </div>
-
-    <div class="circle" data-key="home">
-      <div class="icon">
-        <svg viewBox="0 0 24 24"><path d="M12 3l10 9h-3v9h-4v-6H9v6H5v-9H2z"/></svg>
-      </div>
-      <div class="label">Obsługa domowa</div>
-    </div>
-
-    <div class="circle" data-key="business">
-      <div class="icon">
-        <svg viewBox="0 0 24 24"><path d="M4 4h16v16H4zM6 6v12h12V6z"/></svg>
-      </div>
-      <div class="label">Obsługa firmowa</div>
-    </div>
-
-    <div class="circle" data-key="structural">
-      <div class="icon">
-        <svg viewBox="0 0 24 24"><path d="M3 6h18v2H3zm0 4h18v2H3zm0 4h12v2H3zm0 4h12v2H3z"/></svg>
-      </div>
-      <div class="label">Instalacje strukturalnych sieci teleinformatycznych</div>
-    </div>
-
-    <div class="circle" data-key="fiber">
-      <div class="icon">
-        <svg viewBox="0 0 24 24"><path d="M11 2v20h2V2h-2zM5 10v4h14v-4H5z"/></svg>
-      </div>
-      <div class="label">Spawanie i naprawa światłowodów</div>
-    </div>
+    <div class="circle" data-key="remote">Zdalna pomoc</div>
+    <div class="circle" data-key="install">Instalacja systemu</div>
+    <div class="circle" data-key="network">Konfiguracja sieci</div>
+    <div class="circle" data-key="peripherals">Instalacja peryferiów</div>
+    <div class="circle" data-key="home">Obsługa domowa</div>
+    <div class="circle" data-key="business">Obsługa firmowa</div>
+    <div class="circle" data-key="structural">Instalacje strukturalnych sieci teleinformatycznych</div>
+    <div class="circle" data-key="fiber">Spawanie i naprawa światłowodów</div>
   </div>
 
   <footer>
+    <p id="contact">Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a></p>
+    <p>&copy; 2025 DoItWithIT</p>
+  </footer>
+
+  <script>
+    const langButtons = {
+      pl: document.getElementById("btn-pl"),
+      en: document.getElementById("btn-en")
+    };
+
+    const content = {
+      pl: {
+        siteDesc: "Realne wsparcie IT dla domu i małych firm",
+        contact: 'Kontakt: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Tel: <a href="tel:+48123">+48 123</a>',
+        circles: {
+          remote: "Zdalna pomoc",
+          install: "Instalacja systemu",
+          network: "Konfiguracja sieci",
+          peripherals: "Instalacja peryferiów",
+          home: "Obsługa domowa",
+          business: "Obsługa firmowa",
+          structural: "Instalacje strukturalnych sieci teleinformatycznych",
+          fiber: "Spawanie i naprawa światłowodów"
+        }
+      },
+      en: {
+        siteDesc: "Reliable IT support for home and small business",
+        contact: 'Contact: <a href="mailto:kontakt@doitwith.it">kontakt@doitwith.it</a> | Phone: <a href="tel:+48123">+48 123</a>',
+        circles: {
+          remote: "Remote help",
+          install: "System installation",
+          network: "Network configuration",
+          peripherals: "Peripherals setup",
+          home: "Home support",
+          business: "Business support",
+          structural: "Structured cabling installation",
+          fiber: "Fiber splicing and repair"
+        }
+      }
+    };
+
+    function setLanguage(lang) {
+      document.getElementById("site-desc").textContent = content[lang].siteDesc;
+      document.getElementById("contact").innerHTML = content[lang].contact;
+
+      document.querySelectorAll(".circle").forEach(el => {
+        const key = el.dataset.key;
+        el.textContent = content[lang].circles[key] || "";
+      });
+
+      Object.keys(langButtons).forEach(l => {
+        langButtons[l].classList.toggle("active", l === lang);
+      });
+    }
+
+    langButtons.pl.addEventListener("click", () => setLanguage("pl"));
+    langButtons.en.addEventListener("click", () => setLanguage("en"));
+
+    function positionCircles() {
+      const network = document.querySelector('.network');
+      const circles = document.querySelectorAll('.network .circle:not(.center)');
+      const rect = network.getBoundingClientRect();
+      const centerX = rect.width / 2;
+      const centerY = rect.height / 2;
+      const radius = Math.min(centerX, centerY) - 90;
+      const angleStep = (2 * Math.PI) / circles.length;
+
+      circles.forEach((circle, i) => {
+        const angle = i * angleStep;
+        const x = centerX + radius * Math.cos(angle);
+        const y = centerY + radius * Math.sin(angle);
+        circle.style.left = `${x}px`;
+        circle.style.top = `${y}px`;
+      });
+    }
+
+    window.addEventListener('load', () => {
+      positionCircles();
+      setLanguage('pl');
+    });
+    window.addEventListener('resize', positionCircles);
+  </script>
+
+</body>
+</html>
