--- a/index.html
+++ b/index.html
@@ -85,25 +85,18 @@
       background-color: #003366;
       color: #fff;
       border-radius: 50%;
-      padding: 0.5rem;
+      padding: 1rem;
       transition: transform 0.3s ease, background-color 0.3s ease;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
       border: 2px solid #00bfff;
       width: 110px;
       height: 110px;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
-      font-size: 0.75rem;
+      font-size: 0.85rem;
       transform: translate(-50%, -50%);
-    }
-
-    .circle img {
-      width: 36px;
-      height: 36px;
-      margin-bottom: 0.3rem;
     }
 
     .circle:hover {
@@ -137,13 +130,8 @@
       .circle {
         width: 90px;
         height: 90px;
-        font-size: 0.65rem;
-        padding: 0.3rem;
-      }
-
-      .circle img {
-        width: 28px;
-        height: 28px;
+        font-size: 0.75rem;
+        padding: 0.5rem;
       }
 
       .center {
@@ -168,36 +156,38 @@
 
   <div class="network">
     <div class="center">DoItWithIT</div>
-
     <div class="circle" data-key="remote">
-  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Zdalna pomoc">
-  Zdalna pomoc
-</div>
-
-<div class="circle" data-key="install">
-  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacja systemu">
-  Instalacja systemu
-</div>
-
-<div class="circle" data-key="business">
-  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa firmowa">
-  Obsługa firmowa
-</div>
-
-<div class="circle" data-key="peripherals">
-  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacja peryferiów">
-  Instalacja peryferiów
-</div>
-
-<div class="circle" data-key="home">
-  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa domowa">
-  Obsługa domowa
-</div>
-
-
-    <div class="circle" data-key="network">Konfiguracja sieci</div>
-    <div class="circle" data-key="structural">Instalacje strukturalnych<br>sieci</div>
-    <div class="circle" data-key="fiber">Spawanie światłowodów</div>
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Zdalna pomoc">
+      Zdalna pomoc
+    </div>
+    <div class="circle" data-key="install">
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacja systemu">
+      Instalacja systemu
+    </div>
+    <div class="circle" data-key="peripherals">
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacja peryferiów">
+      Instalacja peryferiów
+    </div>
+    <div class="circle" data-key="business">
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa firmowa">
+      Obsługa firmowa
+    </div>
+    <div class="circle" data-key="home">
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Obsługa domowa">
+      Obsługa domowa
+    </div>
+    <div class="circle" data-key="network">
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Konfiguracja sieci">
+      Konfiguracja sieci
+    </div>
+    <div class="circle" data-key="structural">
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Instalacje sieci strukturalnych">
+      Instalacje sieci strukturalnych
+    </div>
+    <div class="circle" data-key="fiber">
+      <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAA..." alt="Spawanie światłowodów">
+      Spawanie światłowodów
+    </div>
   </div>
 
   <footer>
@@ -222,8 +212,8 @@
           peripherals: "Instalacja peryferiów",
           home: "Obsługa domowa",
           business: "Obsługa firmowa",
-          structural: "Instalacje strukturalnych<br>sieci",
-          fiber: "Spawanie światłowodów"
+          structural: "Instalacje strukturalnych sieci teleinformatycznych",
+          fiber: "Spawanie i naprawa światłowodów"
         }
       },
       en: {
@@ -236,8 +226,8 @@
           peripherals: "Peripherals setup",
           home: "Home support",
           business: "Business support",
-          structural: "Structured cabling<br>installation",
-          fiber: "Fiber splicing"
+          structural: "Structured cabling installation",
+          fiber: "Fiber splicing and repair"
         }
       }
     };
@@ -248,16 +238,16 @@
 
       document.querySelectorAll(".circle").forEach(el => {
         const key = el.dataset.key;
-        if (content[lang].circles[key]) {
-          const img = el.querySelector("img");
-          el.innerHTML = (img ? img.outerHTML : "") + content[lang].circles[key];
-        }
+        el.textContent = content[lang].circles[key] || "";
       });
 
       Object.keys(langButtons).forEach(l => {
         langButtons[l].classList.toggle("active", l === lang);
       });
     }
+
+    langButtons.pl.addEventListener("click", () => setLanguage("pl"));
+    langButtons.en.addEventListener("click", () => setLanguage("en"));
 
     function positionCircles() {
       const network = document.querySelector('.network');
@@ -283,8 +273,6 @@
     });
 
     window.addEventListener('resize', positionCircles);
-    langButtons.pl.addEventListener("click", () => setLanguage("pl"));
-    langButtons.en.addEventListener("click", () => setLanguage("en"));
   </script>
 
 </body>
